1st manual change ;-)

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         {
           "id": "lhqTreeView",
           "name": "LHQ Structure",
-          "when": "resourceExtname == .lhq"
+          "when": "lhqEditorEnabled"
         }
       ]
     },
