--- a/package.json
+++ b/package.json
@@ -47,6 +47,11 @@
     },
     "commands": [
       {
+        "command": "lhqTreeView.refresh",
+        "title": "Refresh",
+        "icon": "$(refresh)"
+      },
+      {
         "command": "lhqTreeView.addItem",
         "title": "Add Item",
         "icon": "$(new-file)"
@@ -65,6 +70,11 @@
     "menus": {
       "view/title": [
         {
+          "command": "lhqTreeView.refresh",
+          "when": "view == lhqTreeView",
+          "group": "navigation"
+        },
+        {
           "command": "lhqTreeView.addItem",
           "when": "view == lhqTreeView",
           "group": "navigation"
@@ -81,7 +91,7 @@
       "view/item/context": [
         {
           "command": "lhqTreeView.addItem",
-          "when": "view == lhqTreeView"
+          "when": "view == lhqTreeView && viewItem == category"
         },
         {
           "command": "lhqTreeView.renameItem",
@@ -90,8 +100,7 @@
         },
         {
           "command": "lhqTreeView.deleteItem",
-          "when": "view == lhqTreeView && (viewItem == category || viewItem == resource)",
-          "group": "inline@2"
+          "when": "view == lhqTreeView && (viewItem == category || viewItem == resource)"
         }
       ]
     }
@@ -125,7 +134,7 @@
     "@vscode/test-electron": "^2.5.2"
   },
   "dependencies": {
-    "@lhq/lhq-generators": "1.0.0-rc.16",
+    "@lhq/lhq-generators": "1.0.0-rc.18",
     "fs-extra": "11.3.0"
   }
 }
