--- a/package.json
+++ b/package.json
@@ -142,7 +142,6 @@
   },
   "dependencies": {
     "@lhq/lhq-generators": "1.0.0-rc.32",
-    "fs-extra": "11.3.0",
-    "jsonc-parser": "3.3.1"
+    "fs-extra": "11.3.0"
   }
 }
