--- a/package.json
+++ b/package.json
@@ -65,6 +65,15 @@
         "command": "lhqTreeView.deleteItem",
         "title": "Delete Item",
         "icon": "$(trash)"
+      },
+      {
+        "command": "lhqTreeView.findInTreeView",
+        "title": "Find",
+        "icon": "$(search)"
+      },{
+        "command": "lhqTreeView.customFind",
+        "title": "Custom Find",
+        "icon": "$(search)"
       }
     ],
     "menus": {
@@ -72,6 +81,10 @@
         {
           "command": "lhqTreeView.refresh",
           "when": "view == lhqTreeView",
+          "group": "navigation"
+        },
+        {
+          "command": "lhqTreeView.findInTreeView",
           "group": "navigation"
         },
         {
@@ -108,7 +121,17 @@
       {
         "command": "lhqTreeView.renameItem",
         "key": "F2",
-        "when": "focusedView == lhqTreeView && lhqEditorIsActive"
+        "when": "focusedView == lhqTreeView && lhqEditorIsActive && lhqTreeViewHasSelectedItem"
+      },
+      {
+        "command": "lhqTreeView.findInTreeView",
+        "key": "ctrl+f",
+        "when": "lhqEditorIsActive"
+      },
+      {
+        "command": "lhqTreeView.advancedFind",
+        "key": "ctrl+alt+f",
+        "when": "lhqEditorIsActive"
       }
     ]
   },
@@ -131,17 +154,17 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@types/vscode": "^1.100.0",
-    "@typescript-eslint/eslint-plugin": "^8.31.1",
-    "@typescript-eslint/parser": "^8.31.1",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.5.2",
-    "esbuild": "^0.25.3",
-    "eslint": "^9.25.1",
+    "esbuild": "^0.25.5",
+    "eslint": "^9.27.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@lhq/lhq-generators": "1.0.0-rc.32",
+    "@lhq/lhq-generators": "1.0.0-rc.40",
     "fs-extra": "11.3.0"
   }
 }
