--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,10 @@
         "dist": true // set this to false to include "dist" folder in search results
     },
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
-    "typescript.tsc.autoDetect": "off"
+    "typescript.tsc.autoDetect": "off",
+
+    "eslint.enable": true, // Enable ESLint
+    "eslint.debug": true, // Enable debugging for ESLint
+    "eslint.lintTask.enable": true, // Enable ESLint linting task
+    "eslint.useFlatConfig": true
 }
