--- a/package.json
+++ b/package.json
@@ -57,6 +57,14 @@
         "icon": "$(new-file)"
       },
       {
+        "command": "lhqTreeView.addCategory",
+        "title": "Add Category"
+      },
+      {
+        "command": "lhqTreeView.addResource",
+        "title": "Add Resource"
+      },
+      {
         "command": "lhqTreeView.renameItem",
         "title": "Rename Item",
         "icon": "$(edit)"
@@ -89,40 +97,35 @@
         },
         {
           "command": "lhqTreeView.addItem",
-          "when": "view == lhqTreeView",
+          "when": "view == lhqTreeView && !lhqTreeHasMultiSelection",
           "group": "navigation"
         },
         {
           "command": "lhqTreeView.renameItem",
-          "when": "view == lhqTreeView"
-        },
-        {
-          "command": "lhqTreeView.deleteItem",
-          "when": "view == lhqTreeView"
+          "when": "view == lhqTreeView && lhqTreeHasSelectedItem"
         }
       ],
       "view/item/context": [
         {
-          "command": "lhqTreeView.addItem",
-          "when": "view == lhqTreeView && viewItem == category"
+          "command": "lhqTreeView.addCategory",
+          "when": "view == lhqTreeView && (viewItem == category || viewItem == model) && !lhqTreeHasMultiSelection"
+        },
+        {
+          "command": "lhqTreeView.addResource",
+          "when": "view == lhqTreeView && (viewItem == category || viewItem == model) && !lhqTreeHasMultiSelection"
         },
         {
           "command": "lhqTreeView.renameItem",
-          "when": "view == lhqTreeView",
+          "when": "view == lhqTreeView && lhqTreeHasSelectedItem",
           "group": "inline@1"
         },
         {
           "command": "lhqTreeView.deleteItem",
-          "when": "view == lhqTreeView && (viewItem == category || viewItem == resource)"
+          "when": "view == lhqTreeView && (viewItem == category || viewItem == resource) && !lhqTreeHasSelectedDiffParents"
         }
       ]
     },
     "keybindings": [
-      {
-        "command": "lhqTreeView.renameItem",
-        "key": "F2",
-        "when": "focusedView == lhqTreeView && lhqEditorIsActive && lhqTreeViewHasSelectedItem"
-      },
       {
         "command": "lhqTreeView.findInTreeView",
         "key": "ctrl+f",
@@ -131,6 +134,16 @@
       {
         "command": "lhqTreeView.advancedFind",
         "key": "ctrl+alt+f",
+        "when": "lhqEditorIsActive"
+      }, 
+      {
+        "command": "lhqTreeView.addCategory",
+        "key": "ctrl+insert",
+        "when": "lhqEditorIsActive"
+      },
+      {
+        "command": "lhqTreeView.addResource",
+        "key": "insert",
         "when": "lhqEditorIsActive"
       }
     ]
@@ -154,17 +167,17 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@types/vscode": "^1.100.0",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
-    "@vscode/test-cli": "^0.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
+    "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.5.2",
     "esbuild": "^0.25.5",
-    "eslint": "^9.27.0",
+    "eslint": "^9.28.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@lhq/lhq-generators": "1.0.0-rc.40",
+    "@lhq/lhq-generators": "1.0.0-rc.41",
     "fs-extra": "11.3.0"
   }
 }
