--- a/package.json
+++ b/package.json
@@ -76,12 +76,12 @@
       },
       {
         "command": "lhqTreeView.deleteElement",
-        "title": "Delete element",
+        "title": "Delete element(s)",
         "icon": "$(trash)"
       },
       {
         "command": "lhqTreeView.deleteLanguage",
-        "title": "Delete language",
+        "title": "Delete language(s)",
         "icon": "$(trash)"
       },
       {
@@ -93,6 +93,16 @@
         "command": "lhqTreeView.markLanguageAsPrimary",
         "title": "Mark language as primary",
         "icon": "$(check)"
+      }, 
+      {
+        "command": "lhqTreeView.showLanguages",
+        "title": "Toggle languages (show)",
+        "icon": "$(layers)"
+      },
+      {
+        "command": "lhqTreeView.hideLanguages",
+        "title": "Toggle languages (hide)",
+        "icon": "$(layers-active)"
       }
     ],
     "menus": {
@@ -119,6 +129,16 @@
         {
           "command": "lhqTreeView.renameElement",
           "when": "view == lhqTreeView && lhqTreeHasSelectedItem && !lhqTreeHasLanguageSelection"
+        },
+        {
+            "command": "lhqTreeView.showLanguages",
+            "when": "view == lhqTreeView && !lhqTreeHasLanguagesVisible",
+            "group": "navigation"
+        },
+        {
+            "command": "lhqTreeView.hideLanguages",
+            "when": "view == lhqTreeView && lhqTreeHasLanguagesVisible",
+            "group": "navigation"
         }
       ],
       "view/item/context": [
