--- a/package.json
+++ b/package.json
@@ -227,11 +227,12 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/lodash.throttle": "^4.1.9",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@types/vscode": "^1.100.0",
-    "@types/lodash.debounce": "^4.0.9",
-    "@types/lodash.throttle": "^4.1.9",
+    "@types/yaireo__tagify": "^4.27.0",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "@vscode/test-cli": "^0.0.11",
@@ -244,8 +245,10 @@
   },
   "dependencies": {
     "@lhq/lhq-generators": "1.0.0-rc.47",
+    "@yaireo/dragsort": "^1.3.2",
+    "@yaireo/tagify": "^4.35.1",
     "fs-extra": "11.3.0",
-    "lodash.debounce": "4.0.8",
-    "lodash.throttle": "4.1.1"
+    "lodash": "^4.17.21",
+    "vue": "^3.4.38"
   }
 }
