--- a/package.json
+++ b/package.json
@@ -227,11 +227,12 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/lodash.throttle": "^4.1.9",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@types/vscode": "^1.100.0",
-    "@types/lodash.debounce": "^4.0.9",
-    "@types/lodash.throttle": "^4.1.9",
+    "@types/vscode-webview": "^1.57.5",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "@vscode/test-cli": "^0.0.11",
@@ -244,8 +245,10 @@
   },
   "dependencies": {
     "@lhq/lhq-generators": "1.0.0-rc.47",
+    "class-transformer": "^0.5.1",
     "fs-extra": "11.3.0",
     "lodash.debounce": "4.0.8",
-    "lodash.throttle": "4.1.1"
+    "lodash.throttle": "4.1.1",
+    "reflect-metadata": "^0.2.2"
   }
 }
