--- a/package.json
+++ b/package.json
@@ -224,11 +224,12 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@lhq/lhq-generators": "1.0.0-rc.63",
+    "@lhq/lhq-generators": "1.0.0-rc.64",
     "class-transformer": "^0.5.1",
     "fs-extra": "11.3.0",
     "lodash.debounce": "4.0.8",
     "lodash.throttle": "4.1.1",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "glob": "^11.0.1"
   }
 }
