handle cancel settings dialog with changes

--- a/package.json
+++ b/package.json
@@ -230,10 +230,22 @@
       },
       {
         "command": "lhqTreeView.focusEditor",
-        "key": "f4",
+        "key": "ctrl+enter",
         "when": "lhqEditorIsActive"
       }
-    ]
+    ],
+    "configuration": [{
+        "id": "common",
+        "title": "LHQ Editor",
+        "properties": {
+            "lhqeditor.autoFocusEditor": {
+                "type": "boolean",
+                "default": false,
+                "scope": "window",
+                "markdownDescription": "Automatically focus the `editor` when the tree view is focused."
+            }
+        }
+    }]
   },
   "scripts": {
     "vscode:prepublish": "pnpm run package",
