--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
   ],
   "main": "./dist/extension.js",
   "contributes": {
+    "configurationDefaults": {
+      "workbench.editorAssociations": {
+        "{git,gitlens}:/**/*.{lhq}": "default"
+      }
+    },
     "languages": [
       {
         "id": "lhq",
@@ -442,7 +447,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@lhq/lhq-generators": "1.0.0-rc.98",
+    "@lhq/lhq-generators": "1.0.0-rc.110",
     "class-transformer": "^0.5.1",
     "exceljs": "^4.4.0",
     "fs-extra": "11.3.0",
